--- a/source/index.html
+++ b/source/index.html
@@ -25,20 +25,33 @@
 
           <header>
  <section class="top-bar container">
-   <div class="row">
-      <div class="col-50">
+   <div class="row ">
+      <div class="column col-50">
           logo
         </div>
-        <div class="col-50 ">
+        <div class="column col-50 ">
           <span class="float-right"> dropdown</span>
         </div>
    </div>
 
- </section>
+  </section>
 
-            <nav>
+<section>
 
-            </nav>
+ <nav>
+  <ul class="text-center">
+    <li class="nav-item active">Home</li>
+    <li class="nav-item">Destinations</li>
+    <li class="nav-item">Entertainment</li>
+    <li class="nav-item">News</li>
+    <li class="nav-item">Weather</li>
+    <li class="nav-item">Shopping</li>
+  </ul>
+
+ </nav>
+
+</section>
+
           </header>
 
 
